исправила ширину блока в типографии добавила разметку компонентов

--- a/components.html
+++ b/components.html
@@ -111,6 +111,78 @@
 
                               </table>
                         </section>
+                        <section class="components__tab">
+                              <h2 class="visually-hidden">Табы</h2>
+                              <table class="components__tab-table">
+                                    <caption class="components__tab-headline">Табы</caption>
+                                    <tr class="components__tab-ordinary">
+                                          <td class="components__tab-name">Обычные</td>
+                                          <td>
+
+                                          </td>
+                                          <td>
+
+                                          </td>
+                                    </tr>
+                                    <tr class="components__tab-small">
+                                          <td class="components__tab-name">Маленькие табы</td>
+                                          <td>
+
+                                          </td>
+                                          <td>
+
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
+                        <section class="components__tag">
+                              <h2 class="visually-hidden"></h2>
+                              <table class="components__tag-table">
+                                    <caption class="components__tag-headline">Теги</caption>
+                                    <tr class="components__tag-ordinary">
+                                          <td class="components__tag-name">Обычные</td>
+                                          <td>
+
+                                          </td>
+                                          <td>
+
+                                          </td>
+                                    </tr>
+                                    <tr class="components__tag-round">
+                                          <td class="components__tag-name">Скругленные</td>
+                                          <td>
+
+                                          </td>
+                                          <td>
+
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
+                        <section class="components__progressbar">
+                              <h2 class="visually-hidden"></h2>
+                              <table class="components__progressbar-table">
+                                    <caption class="components__progressbar-headline">Прогресс-бары</caption>
+                                    <tr class="components__progressbar-ordinary">
+                                          <td class="components__progressbar-name">Обычные</td>
+                                          <td>
+
+                                          </td>
+                                          <td>
+
+                                          </td>
+                                    </tr>
+                                    <tr class="components__progressbar-text">
+                                          <td class="components__progressbar-name">С текстом</td>
+                                          <td>
+
+                                          </td>
+                                          <td>
+
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
                   </div>
             </main>
       </div>
