табы, теги, бары

--- a/components.html
+++ b/components.html
@@ -118,18 +118,56 @@
                                     <tr class="components__tab-ordinary">
                                           <td class="components__tab-name">Обычные</td>
                                           <td>
+                                                <div class="tab-ordinary__wrapper1">
+                                                      <button
+                                                            class="tab-ordinary__wrapper1-button tab-ordinary__wrapper1-button--current"
+                                                            type="button" value="button">Первый</button>
+                                                      <button class="tab-ordinary__wrapper1-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tab-ordinary__wrapper1-button" type="button"
+                                                            value="button">Третий</button>
+
+                                                </div>
 
                                           </td>
                                           <td>
+                                                <div class="tab-ordinary__wrapper2">
+                                                      <button
+                                                            class="tab-ordinary__wrapper2-button tab-ordinary__wrapper2-button--current"
+                                                            type="button" value="button">Первый</button>
+                                                      <button class="tab-ordinary__wrapper2-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tab-ordinary__wrapper2-button" type="button"
+                                                            value="button">Третий</button>
+                                                </div>
 
                                           </td>
                                     </tr>
                                     <tr class="components__tab-small">
                                           <td class="components__tab-name">Маленькие табы</td>
                                           <td>
+                                                <div class="tab-small__wrapper1">
+                                                      <button
+                                                            class="tab-small__wrapper1-button tab-small__wrapper1-button--current"
+                                                            type="button" value="button">Первый</button>
+                                                      <button class="tab-small__wrapper1-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tab-small__wrapper1-button" type="button"
+                                                            value="button">Третий</button>
+
+                                                </div>
 
                                           </td>
                                           <td>
+                                                <div class="tab-small__wrapper2">
+                                                      <button
+                                                            class="tab-small__wrapper2-button tab-small__wrapper2-button--current"
+                                                            type="button" value="button">Первый</button>
+                                                      <button class="tab-small__wrapper2-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tab-small__wrapper2-button" type="button"
+                                                            value="button">Третий</button>
+                                                </div>
 
                                           </td>
                                     </tr>
@@ -142,18 +180,52 @@
                                     <tr class="components__tag-ordinary">
                                           <td class="components__tag-name">Обычные</td>
                                           <td>
+                                                <div class="tag-ordinary__wrapper1">
+                                                      <button class="tag-ordinary__wrapper1-button" type="button"
+                                                            value="button">Первый</button>
+                                                      <button class="tag-ordinary__wrapper1-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tag-ordinary__wrapper1-button" type="button"
+                                                            value="button">Третий</button>
+
+                                                </div>
 
                                           </td>
                                           <td>
+                                                <div class="tag-ordinary__wrapper2">
+                                                      <button class="tag-ordinary__wrapper2-button" type="button"
+                                                            value="button">Первый</button>
+                                                      <button class="tag-ordinary__wrapper2-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tag-ordinary__wrapper2-button" type="button"
+                                                            value="button">Третий</button>
+                                                </div>
 
                                           </td>
                                     </tr>
                                     <tr class="components__tag-round">
                                           <td class="components__tag-name">Скругленные</td>
                                           <td>
+                                                <div class="tag-round__wrapper1">
+                                                      <button class="tag-round__wrapper1-button" type="button"
+                                                            value="button">Первый</button>
+                                                      <button class="tag-round__wrapper1-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tag-round__wrapper1-button" type="button"
+                                                            value="button">Третий</button>
+
+                                                </div>
 
                                           </td>
                                           <td>
+                                                <div class="tag-round__wrapper2">
+                                                      <button class="tag-round__wrapper2-button" type="button"
+                                                            value="button">Первый</button>
+                                                      <button class="tag-round__wrapper2-button" type="button"
+                                                            value="button">Второй</button>
+                                                      <button class="tag-round__wrapper2-button" type="button"
+                                                            value="button">Третий</button>
+                                                </div>
 
                                           </td>
                                     </tr>
@@ -166,19 +238,29 @@
                                     <tr class="components__progressbar-ordinary">
                                           <td class="components__progressbar-name">Обычные</td>
                                           <td>
+                                                <div class="progressbar-ordinary__wrapper">
+                                                      <div class="progressbar-ordinary__bar">
 
-                                          </td>
-                                          <td>
+                                                      </div>
+
+                                                </div>
 
                                           </td>
                                     </tr>
                                     <tr class="components__progressbar-text">
                                           <td class="components__progressbar-name">С текстом</td>
                                           <td>
+                                                <div class="progressbar-text__wrapper">
+                                                      <div class="progressbar-text__bar">
 
-                                          </td>
-                                          <td>
+                                                      </div>
+                                                      <div class="progressbar-text__text-wrapper">
+                                                            <span class="progressbar-text__text-1">Загрузка новой
+                                                                  обложки</span>
+                                                            <span class="progressbar-text__text-2">25%</span>
 
+                                                      </div>
+                                                </div>
                                           </td>
                                     </tr>
                               </table>
