--- a/components.html
+++ b/components.html
@@ -232,7 +232,7 @@
                               </table>
                         </section>
                         <section class="components__progressbar">
-                              <h2 class="visually-hidden"></h2>
+                              <h2 class="visually-hidden">Прогресс-бары</h2>
                               <table class="components__progressbar-table">
                                     <caption class="components__progressbar-headline">Прогресс-бары</caption>
                                     <tr class="components__progressbar-ordinary">
@@ -265,6 +265,19 @@
                                     </tr>
                               </table>
                         </section>
+                        <section class="components__carts">
+                              <h2 class="components__carts-headline">Карточки</h2>
+                              <div class="components__carts-wrapper">
+                                    <div class="components__cart1">
+                                          <img class="components__cart1-img" src="img/pic-1.svg" width="200" height="200" alt="Изображение">
+                                          <h4 class="components__cart1-name">Типографика</h4>
+                                          <p class="components__cart1-notice">Шрифтовые стили для структурирования
+                                                текстового контента</p>
+                                          <a href="" class="components__cart1-link">Перейти</a>
+                                    </div>
+                              </div>
+                        </section>
+
                   </div>
             </main>
       </div>
