--- a/form-elements.html
+++ b/form-elements.html
@@ -842,6 +842,65 @@
                                           </td>
 
                                     </tr>
+                                    <tr class="form-elements__addition-tumbler-small">
+                                          <td class="form-elements__addition-style-name">Тумблер маленький</td>
+                                          <td>
+                                                <div class="form-elements__tumbler-small-wrapper1">
+                                                      <span class="tumbler-small__name">Маленький тумблер</span>
+                                                      <div class="tumbler-small__grey">
+                                                            <div class="tumbler-small__grey-toggle"></div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__tumbler-small-wrapper2">
+                                                      <span class="tumbler-small__name">Маленький тумблер</span>
+                                                      <div class="tumbler-small__white">
+                                                            <div class="tumbler-small__white-toggle"></div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__addition-tumbler-big">
+                                          <td class="form-elements__addition-style-name">Тумблер большой</td>
+                                          <td>
+                                                <div class="form-elements__tumbler-big-wrapper">
+                                                      <span class="tumbler-big__name">Большой тумблер с очень длинным
+                                                            текстом</span>
+                                                      <div class="tumbler-big__grey">
+                                                            <div class="tumbler-big__grey-toggle"></div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__tumbler-big-wrapper">
+                                                      <span class="tumbler-big__name">Большой тумблер с очень длинным
+                                                            текстом</span>
+                                                      <div class="tumbler-big__white">
+                                                            <div class="tumbler-big__white-toggle"></div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__addition-tumbler-blocked">
+                                          <td class="form-elements__addition-style-name">Тумблер заблокированный</td>
+                                          <td>
+                                                <div class="form-elements__tumbler-blocked-wrapper">
+                                                      <span class="tumbler-blocked__name">Маленький тумблер</span>
+                                                      <div class="tumbler-blocked__grey">
+                                                            <div class="tumbler-blocked__grey-toggle"></div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__tumbler-blocked-wrapper">
+                                                      <span class="tumbler-blocked__name">Маленький тумблер</span>
+                                                      <div class="tumbler-blocked__white">
+                                                            <div class="tumbler-blocked__white-toggle"></div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                    </tr>
                               </table>
                         </section>
 
