--- a/form-elements.html
+++ b/form-elements.html
@@ -847,57 +847,69 @@
                                           <td>
                                                 <div class="form-elements__tumbler-small-wrapper1">
                                                       <span class="tumbler-small__name">Маленький тумблер</span>
-                                                      <div class="tumbler-small__grey">
-                                                            <div class="tumbler-small__grey-toggle"></div>
-                                                      </div>
+                                                      <label class="tumbler-small__grey-wrapper">
+                                                            <input class="visually-hidden tumbler-small__grey-input"
+                                                                  type="checkbox">
+                                                            <div class="tumbler-small__grey"></div>
+                                                      </label>
                                                 </div>
                                           </td>
                                           <td>
                                                 <div class="form-elements__tumbler-small-wrapper2">
                                                       <span class="tumbler-small__name">Маленький тумблер</span>
-                                                      <div class="tumbler-small__white">
-                                                            <div class="tumbler-small__white-toggle"></div>
-                                                      </div>
+                                                      <label class="tumbler-small__white-wrapper">
+                                                            <input class="visually-hidden tumbler-small__white-input"
+                                                                  type="checkbox">
+                                                            <div class="tumbler-small__white"></div>
+                                                      </label>
                                                 </div>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__addition-tumbler-big">
                                           <td class="form-elements__addition-style-name">Тумблер большой</td>
                                           <td>
-                                                <div class="form-elements__tumbler-big-wrapper">
+                                                <div class="form-elements__tumbler-big-wrapper1">
                                                       <span class="tumbler-big__name">Большой тумблер с очень длинным
                                                             текстом</span>
-                                                      <div class="tumbler-big__grey">
-                                                            <div class="tumbler-big__grey-toggle"></div>
-                                                      </div>
+                                                      <label class="tumbler-big__grey-wrapper">
+                                                            <input class="visually-hidden tumbler-big__grey-input"
+                                                                  type="checkbox">
+                                                            <div class="tumbler-big__grey"></div>
+                                                      </label>
                                                 </div>
                                           </td>
                                           <td>
-                                                <div class="form-elements__tumbler-big-wrapper">
+                                                <div class="form-elements__tumbler-big-wrapper2">
                                                       <span class="tumbler-big__name">Большой тумблер с очень длинным
                                                             текстом</span>
-                                                      <div class="tumbler-big__white">
-                                                            <div class="tumbler-big__white-toggle"></div>
-                                                      </div>
+                                                      <label class="tumbler-big__white-wrapper">
+                                                            <input class="visually-hidden tumbler-big__white-input"
+                                                                  type="checkbox">
+                                                            <div class="tumbler-big__white"></div>
+                                                      </label>
                                                 </div>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__addition-tumbler-blocked">
                                           <td class="form-elements__addition-style-name">Тумблер заблокированный</td>
                                           <td>
-                                                <div class="form-elements__tumbler-blocked-wrapper">
+                                                <div class="form-elements__tumbler-blocked-wrapper1">
                                                       <span class="tumbler-blocked__name">Маленький тумблер</span>
-                                                      <div class="tumbler-blocked__grey">
-                                                            <div class="tumbler-blocked__grey-toggle"></div>
-                                                      </div>
+                                                      <label class="tumbler-blocked__grey-wrapper">
+                                                            <input class="visually-hidden tumbler-blocked__grey-input"
+                                                                  type="checkbox" disabled>
+                                                            <div class="tumbler-blocked__grey"></div>
+                                                      </label>
                                                 </div>
                                           </td>
                                           <td>
-                                                <div class="form-elements__tumbler-blocked-wrapper">
+                                                <div class="form-elements__tumbler-blocked-wrapper2">
                                                       <span class="tumbler-blocked__name">Маленький тумблер</span>
-                                                      <div class="tumbler-blocked__white">
-                                                            <div class="tumbler-blocked__white-toggle"></div>
-                                                      </div>
+                                                      <label class="tumbler-blocked__white-wrapper">
+                                                            <input class="visually-hidden tumbler-blocked__white-input"
+                                                                  type="checkbox" disabled>
+                                                            <div class="tumbler-blocked__white"></div>
+                                                      </label>
                                                 </div>
                                           </td>
                                     </tr>
