в карточках вставила черные иконки, которые надо покрасить

--- a/blocks.html
+++ b/blocks.html
@@ -270,16 +270,18 @@
                               <section class="blocks__more-photo">
                                     <h3 class="blocks__name">Слайдер с фотографиями</h3>
                                     <div class="more-photo__wrapper">
-                                          <div class="more-photo__slider1">
-                                                <img src="img/unsplash.jpg" class="more-photo__slider1-img" width="1039"
-                                                      height="692" alt="photo-one">
+                                          <ul class="more-photo__slider-container">
+                                                <li class="more-photo__slider">
+                                                      <img src="img/unsplash.jpg" class="more-photo__slider1-img"
+                                                            width="1039" height="692" alt="photo-one">
 
-                                          </div>
-                                          <div class="more-photo__slider2">
-                                                <img src="img/unsplash2.jpg" class="more-photo__slider2-img"
-                                                      width="1039" height="692" alt="photo-two">
+                                                </li>
+                                                <li class="more-photo__slider">
+                                                      <img src="img/unsplash2.jpg" class="more-photo__slider2-img"
+                                                            width="1039" height="692" alt="photo-two">
 
-                                          </div>
+                                                </li>
+                                          </ul>
                                           <button class="more-photo__button-back" type="button" value="button"><span
                                                       class="visually-hidden">назад</span></button>
                                           <button class="more-photo__button-forward" type="button" value="button"><span
@@ -297,10 +299,18 @@
                                                       <p class="more-tariff__free-notice">3 пользователя</p>
                                                 </div>
                                                 <ul class="more-tariff__free-list">
-                                                      <li class="more-tariff__free-list-item">Печеньки</li>
-                                                      <li class="more-tariff__free-list-item">Фишки</li>
-                                                      <li class="more-tariff__free-list-item">Чаек</li>
-                                                      <li class="more-tariff__free-list-item">Вкусняшки</li>
+                                                      <li
+                                                            class="more-tariff__free-list-item more-tariff__free-list-item1">
+                                                            Печеньки</li>
+                                                      <li
+                                                            class="more-tariff__free-list-item more-tariff__free-list-item2">
+                                                            Фишки</li>
+                                                      <li
+                                                            class="more-tariff__free-list-item more-tariff__free-list-item3">
+                                                            Чаек</li>
+                                                      <li
+                                                            class="more-tariff__free-list-item more-tariff__free-list-item4">
+                                                            Вкусняшки</li>
                                                 </ul>
                                                 <button class="more-tariff__free-button">Выбрать тариф</button>
                                           </div>
@@ -311,10 +321,18 @@
                                                       <p class="more-tariff__premium-notice">10 пользователей</p>
                                                 </div>
                                                 <ul class="more-tariff__premium-list">
-                                                      <li class="more-tariff__premium-list-item">Печеньки</li>
-                                                      <li class="more-tariff__premium-list-item">Фишки</li>
-                                                      <li class="more-tariff__premium-list-item">Чаек</li>
-                                                      <li class="more-tariff__premium-list-item">Вкусняшки</li>
+                                                      <li
+                                                            class="more-tariff__premium-list-item more-tariff__premium-list-item1">
+                                                            Печеньки</li>
+                                                      <li
+                                                            class="more-tariff__premium-list-item more-tariff__premium-list-item2">
+                                                            Фишки</li>
+                                                      <li
+                                                            class="more-tariff__premium-list-item more-tariff__premium-list-item3">
+                                                            Чаек</li>
+                                                      <li
+                                                            class="more-tariff__premium-list-item more-tariff__premium-list-item4">
+                                                            Вкусняшки</li>
                                                 </ul>
                                                 <button class="more-tariff__premium-button">Выбрать тариф</button>
                                           </div>
@@ -325,10 +343,18 @@
                                                       <p class="more-tariff__unlimited-notice">10 пользователей</p>
                                                 </div>
                                                 <ul class="more-tariff__unlimited-list">
-                                                      <li class="more-tariff__unlimited-list-item">Печеньки</li>
-                                                      <li class="more-tariff__unlimited-list-item">Фишки</li>
-                                                      <li class="more-tariff__unlimited-list-item">Чаек</li>
-                                                      <li class="more-tariff__unlimited-list-item">Вкусняшки</li>
+                                                      <li
+                                                            class="more-tariff__unlimited-list-item more-tariff__unlimited-list-item1">
+                                                            Печеньки</li>
+                                                      <li
+                                                            class="more-tariff__unlimited-list-item more-tariff__unlimited-list-item2">
+                                                            Фишки</li>
+                                                      <li
+                                                            class="more-tariff__unlimited-list-item more-tariff__unlimited-list-item3">
+                                                            Чаек</li>
+                                                      <li
+                                                            class="more-tariff__unlimited-list-item more-tariff__unlimited-list-item4">
+                                                            Вкусняшки</li>
                                                 </ul>
                                                 <button class="more-tariff__unlimited-button">Выбрать тариф</button>
                                           </div>
